Added migration for nullable fields

--- a/ItemMarketplaceTestTask.WebApi/ItemMarketplaceTestTask.WebApi.csproj
+++ b/ItemMarketplaceTestTask.WebApi/ItemMarketplaceTestTask.WebApi.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ItemMarketplaceTestTask.Service\ItemMarketplaceTestTask.Service.csproj" />
     <ProjectReference Include="..\ItemMarketplaceTestTask.Infrastructure\ItemMarketplaceTestTask.Infrastructure.csproj" />
   </ItemGroup>
 
