--- a/ItemMarketplaceTestTask.WebApi/appsettings.json
+++ b/ItemMarketplaceTestTask.WebApi/appsettings.json
@@ -1,8 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Error"
+    }
+  },
+  "Console": {
+    "LogLevel": {
+      "Default": "Debug"
     }
   },
   "AllowedHosts": "*",
